--- a/Main/templates/Main/base.html
+++ b/Main/templates/Main/base.html
@@ -39,8 +39,8 @@ rel="stylesheet"
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             
             <li class="nav-item">
-              <a class="nav-link" href="#" rel="nofollow"
-                target="_blank">Career Assesment</a>
+              <a class="nav-link" href="{% url 'Main:career-assesment' %}" rel="nofollow"
+                >Career Assesment</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" >Career Suggestions</a>
