--- a/Main/templates/Main/base.html
+++ b/Main/templates/Main/base.html
@@ -45,6 +45,9 @@ rel="stylesheet"
             <li class="nav-item">
               <a class="nav-link" href="#" >Career Suggestions</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'Main:chat' %}" > CHAT Now</a>
+            </li>
           </ul>
 
           <ul class="navbar-nav d-flex flex-row">
