--- a/Main/templates/Main/career_assessment.html
+++ b/Main/templates/Main/career_assessment.html
@@ -1,47 +1,84 @@
 {% include 'Main/base.html' %}
+<main class="my-5">
+  <div class="container">
+    <section>
+      <div id="intro" class="p-5 text-center bg-light shadow-5 rounded-5 mb-5">
+        <h1 class="mb-3 h2 text-primary">Career Assessment</h1>
+        <p class="mb-3">Answer some questions and get Suggestions.</p>
+        {% for m in messages %}
+        <span class="alert alert-success"> {{m}} </span>
+        {% endfor %}
+      </div>
 
 
-  <!--Main layout-->
-  <main class="my-5">
-    <div class="container">
-      <!--Section: Content-->
-      <section>
-        <!-- Jumbotron -->
-        <div id="intro" class="p-5 text-center bg-light shadow-5 rounded-5 mb-5">
-          <h1 class="mb-3 h2 text-primary ">Career Assesment </h1>
-          <p class="mb-3">Answer some questions and get Suggestions.</p>
-        </div>
-        <!-- Jumbotron -->
-      </section>
-      <!--Section: Content-->
+    
 
-     <!-- Questions and Answers Cards -->
-     <div class="row">
-      {% for question in questions %}
-      <div class="col-md-6 mb-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">{{ question.question }}</h5>
-            {% for answer in question.careerassesmentanswer_set.all %}
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="answer_{{ answer.id }}" value="{{ answer.id }}">
-              <label class="form-check-label" for="answer_{{ answer.id }}">
-                {{ answer.answer }}
-              </label>
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+
+        <table class="table table-striped">
+          <thead>
+              <tr>
+                  <th scope="col">Question</th>
+                  <th scope="col">Answer</th>
+              </tr>
+          </thead>
+          <tbody>
+              {% for question, answer in career_responses.items %}
+                  <tr>
+                      <td>{{ question }}</td>
+                      <td>{{ answer }}</td>
+                  </tr>
+              {% endfor %}
+          </tbody>
+      </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+
+        <a type="button" class="btn btn-danger" href="{% url 'Main:delete_user_assesment' %}">Delete My Assesments</button></a>
+      </div>
+    </div>
+  </div>
+</div>
+    </section>
+    
+    <form method="post" class="needs-validation" novalidate>
+      {% csrf_token %}
+      <div class="row">
+        {% for question in questions %}
+        <div class="col-md-6 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{ question.question }}</h5>
+              {% for answer in question.careerassesmentanswer_set.all %}
+              <div class="form-check">
+                <input type="radio" name="question_{{ question.id }}" id="answer_{{ answer.id }}" value="{{ answer.id }}" class="form-check-input">
+                <label class="form-check-label" for="answer_{{ answer.id }}">
+                  {{ answer.answer }}
+                </label>
+              </div>
+              {% endfor %}
             </div>
-            {% endfor %}
           </div>
         </div>
+        {% endfor %}
       </div>
-      {% endfor %}
-    </div>
-    <!-- Questions and Answers Cards -->
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
-
-
- 
-    </div>
-  </main>
-  <!--Main layout-->
+    <button type="button" class="btn btn-info" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
+      View Career Assessment Responses
+    </button>
+    
+  </div>
+</main>
 
 {% include 'Main/footer.html' %}
