--- a/Main/templates/Main/home.html
+++ b/Main/templates/Main/home.html
@@ -2,7 +2,7 @@
 <div class="row justify-content-center my-4">
     <div class="col-md-7 mt-4">
         <div class="card">
-            <h1 class="card-header text-center">A.I WEB ASSISTANT</h1>
+            <h1 class="card-header text-center">Career Bot</h1>
             <div class="card-body">
               <div class="d-flex justify-content-end">
                 <button type="button" class="btn btn-primary mb-3" onclick="location.href='{% url 'new_chat' %}'">New Chat +</button>
